Fix: prevent card overflow in chrome based browsers #321

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -211,6 +211,7 @@ small {
 
 .card {
   min-height: 300px;
+  word-break: break-word;
 }
 
 .cardFooterPlayback {
